media/cwa/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cwa
spec:
  type: ClusterIP
  ports:
  - port: 8083
    targetPort: 8083
  selector:
    app: cwa
