media/cwa/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cwa
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: true
spec:
  ingressClassName: traefik
  rules:
  - host: cwa.${INFRA_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: cwa
            port:
              number: 8083
        path: /
        pathType: Prefix
